# EqLite

./: CMakeLists.txt
CMake/: PurpleAddAmalgamation.cmake  PurpleAddLibrary.cmake  PurpleExpandLibraries.cmake
eq_source/: CMakeLists.txt  EqualizerConfig.cmake  EqualizerConfigVersion.cmake
